[tool.poetry]
name = "spotify-user-register"
version = "1.0.0"
description = ""
authors = ["Ignacio <igna@tixte.gifts>"]

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.26.0"
colorama = "^0.4.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
